samples/_failures_safe/1761303466_d1df76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ac3bd59.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_8ac3bd59.c:182:5: error: expected expression at end of input
  182 |     if (!
      |     ^~
./samples/SAFE/__tmp_8ac3bd59.c:182:5: error: expected declaration or statement at end of input
